--- a/src/app/modules/tournament-management/components/tournament-all-published/tournament-all-published.component.scss
+++ b/src/app/modules/tournament-management/components/tournament-all-published/tournament-all-published.component.scss
@@ -21,7 +21,7 @@
 }
 
 .all-tournaments {
-	height: calc(100% - 60px);
+	height: calc(100% - 80px);
 	overflow-y: auto;
 
 	padding: 8px;
