--- a/src/app/modules/tournament-management/components/tournament-card/tournament-card.component.scss
+++ b/src/app/modules/tournament-management/components/tournament-card/tournament-card.component.scss
@@ -32,8 +32,14 @@
 				margin-right: 8px;
 			}
 
-			.name {
-				font-size: 18px;
+			.tournament-name {
+				.name {
+					font-size: 18px;
+				}
+
+				.created-by {
+					font-size: 12px;
+				}
 			}
 		}
 
@@ -57,38 +63,16 @@
 			}
 		}
 
-		.tournament-teams {
+		.all-administrators {
 			display: flex;
 			flex-direction: row;
-			flex-wrap: wrap;
 
-			.team {
-				flex: 1 0 21%;
-
-				padding: 8px;
-				margin: 8px;
-
-				border: 1px solid darken(#3c4452, 15%);
-				-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
-				-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
-				box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
-			}
-		}
-
-		.tournament-players {
-			display: flex;
-			flex-direction: row;
-			flex-wrap: wrap;
-
-			.player {
-				h5 {
-					margin: 0;
-				}
-
-				flex: 1 0 21%;
+			.administrator {
+				display: flex;
+				flex-direction: row;
 
 				padding: 8px;
-				margin: 8px;
+				margin: 4px;
 
 				border: 1px solid darken(#3c4452, 15%);
 				-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
@@ -107,31 +91,20 @@
 
 			.mappools {
 				display: flex;
-				flex-direction: column;
+				flex-direction: row;
+				flex-wrap: wrap;
 
 				.mappool {
 					display: flex;
-					flex-direction: column;
+					flex-direction: row;
 
-					h4 {
-						margin-bottom: 0;
-					}
+					padding: 8px;
+					margin: 4px;
 
-					.mod-brackets {
-						display: flex;
-						flex-direction: row;
-						flex-wrap: wrap;
-
-						.mod-bracket {
-							padding: 8px;
-							margin: 4px;
-
-							border: 1px solid darken(#3c4452, 15%);
-							-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
-							-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
-							box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
-						}
-					}
+					border: 1px solid darken(#3c4452, 15%);
+					-webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+					-moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
+					box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.15);
 				}
 			}
 		}
@@ -146,4 +119,9 @@
 
 		cursor: pointer;
 	}
+}
+
+.divider {
+	margin-top: 8px;
+	margin-bottom: 8px;
 }
